@@ -1,62 +1,0 @@
-// Copyright 2002-2014, University of Colorado Boulder
-
-/**
- * Base class for all "popups" used in the Game to tell the user whether their guess is balanced or unbalanced.
- * These indicators look like a dialog (aka "popup").
- *
- * @author Vasily Shakhov (mlearner.com)
- */
-define( function( require ) {
-  'use strict';
-
-  // modules
-  var inherit = require( 'PHET_CORE/inherit' );
-  var Node = require( 'SCENERY/nodes/Node' );
-  var Rectangle = require( 'SCENERY/nodes/Rectangle' );
-  var VBox = require( 'SCENERY/nodes/VBox' );
-  var PhetFont = require( 'SCENERY_PHET/PhetFont' );
-  var Shape = require( 'KITE/Shape' );
-  var FaceNode = require( 'SCENERY_PHET/FaceNode' );
-
-  // constants
-  var FONT = new PhetFont( 18 );
-  var FACE_DIAMETER = 75;
-
-  /**
-   * @param {Boolean} smile
-   * @param {Function} createContentFunction function that creates the content of the dialog that will appear below the face node
-   * @param {*} options
-   */
-  function GamePopupNode( smile, createContentFunction, options ) {
-
-    options = _.extend( {
-      xMargin: 25,
-      yMargin: 10
-    }, options );
-
-    // face
-    var faceNode = new FaceNode( FACE_DIAMETER );
-    if ( !smile ) {
-      faceNode.frown();
-    }
-
-    // content
-    var content = new VBox( {
-      children: [ faceNode, createContentFunction.call( this, FONT ) ],
-      spacing: 5
-    } );
-
-    // background with shadow
-    var backgroundBounds = Shape.bounds( content.bounds.dilatedXY( options.xMargin, options.yMargin ) ).bounds;
-    var backgroundNode = new Rectangle( backgroundBounds.x, backgroundBounds.y, backgroundBounds.width, backgroundBounds.height,
-      { fill: '#c1d8fe', stroke: 'black' } );
-    var shadowNode = new Rectangle( backgroundBounds.x + 5, backgroundBounds.y + 5, backgroundBounds.width, backgroundBounds.height,
-      { fill: 'rgba(80,80,80,0.12)' } );
-    content.centerX = backgroundNode.centerX;
-
-    options.children = [ shadowNode, backgroundNode, content ];
-    Node.call( this, options );
-  }
-
-  return inherit( Node, GamePopupNode );
-} );
